--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -57,9 +57,9 @@
     "@types/react-bootstrap-typeahead": "^3.4.6",
     "@types/react-dom": "^17.0.9",
     "@types/react-syntax-highlighter": "^11.0.4",
-    "@types/react-textarea-autosize": "^4.3.5",
+    "@types/react-textarea-autosize": "4.3.5",
     "sass": "^1.26.5",
-    "typescript": "^4.4.2"
+    "typescript": "4.3.5"
   },
   "license": "MIT"
 }
