--- a/packages/sdk-js/package.json
+++ b/packages/sdk-js/package.json
@@ -50,7 +50,7 @@
     "rollup": "^2.56.3",
     "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^27.0.5",
-    "typescript": "^4.4.2"
+    "typescript": "4.3.5"
   },
   "browserslist": [
     "defaults",
