--- a/packages/sdk-react/package.json
+++ b/packages/sdk-react/package.json
@@ -55,7 +55,7 @@
     "npm-run-all": "^4.1.5",
     "rollup": "^2.56.3",
     "ts-jest": "^27.0.5",
-    "typescript": "^4.4.2"
+    "typescript": "4.3.5"
   },
   "browserslist": [
     "defaults",
