--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
         run: |
           yarn
           python -m pip install --upgrade pip
-          pip install numpy scipy pandas pytest black flake8
+          pip install numpy scipy pandas pytest black flake8 nbformat gbstats
         env:
           CI: true
 
