Generate Jupyter notebook of experiment results (#81)
Also:
* Publish stats engine as a standalone python package
* Store raw query result rows in addition to the processed results
* Switch back-end to use new `gbstats` library for analysis, show raw query results as rows.
* Switch docker to use `python-slim` base image instead of `node-alpine`
* Downgrade typescript to 4.3.5 to fix ts-server bugs
* Display query results as a table instead of JSON string

--- a/package.json
+++ b/package.json
@@ -29,13 +29,8 @@
     "eslint-plugin-react": "^7.20.0",
     "lint-staged": "^10.2.7",
     "prettier": "^2.2.1",
-    "typescript": "^4.4.2",
+    "typescript": "4.3.5",
     "husky": "^7.0.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn type-check && lint-staged"
-    }
   },
   "lint-staged": {
     "./**/*.{json,css,scss,md,mdx}": [
