--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -4,15 +4,12 @@
   "private": true,
   "scripts": {
     "build:emails": "mkdir -p dist/templates && cp -r src/templates/* dist/templates",
-    "build:python": "rm -rf dist/python && mkdir -p dist/python && cp -r src/python/* dist/python",
     "build:clean": "rm -rf dist",
     "build:typescript": "tsc",
     "dev": "node-dev src/server.ts",
-    "build": "yarn build:clean && yarn build:typescript && yarn build:python && yarn build:emails",
+    "build": "yarn build:clean && yarn build:typescript && yarn build:emails",
     "start": "node dist/server.js",
-    "test:node": "jest --forceExit --verbose --detectOpenHandles",
-    "test:python": "cd src/python && python3 -m unittest discover",
-    "test": "yarn test:python && yarn test:node",
+    "test": "jest --forceExit --verbose --detectOpenHandles",
     "type-check": "tsc --pretty --noEmit",
     "generate-dummy-data": "node --stack-size=8192 ./test/data-generator/data-generator.js",
     "import-dummy-data": "node --stack-size=8192 ./test/data-generator/import.js"
@@ -54,6 +51,7 @@
     "pino-pretty": "^5.1.0",
     "presto-client": "^0.11.2",
     "python-shell": "^3.0.0",
+    "saslprep": "^1.0.0",
     "snowflake-promise": "^4.5.0",
     "sql-formatter": "^4.0.2",
     "string-env-interpolation": "^1.0.1",
@@ -90,7 +88,7 @@
     "objects-to-csv": "^1.3.6",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.0.0",
-    "typescript": "^4.4.2"
+    "typescript": "4.3.5"
   },
   "license": "MIT"
 }
