Simplify pre-commit hook: remove typecheck, only lint Python when changed

--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
     ],
     "./**/*.{ts,tsx}": [
       "yarn lint"
+    ],
+    "./packages/stats/gbstats/**/*.py": [
+      "black",
+      "flake8"
     ]
   },
   "license": "MIT"
