--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -25,6 +25,8 @@
     "bootstrap": "^4.5.0",
     "clsx": "^1.1.1",
     "date-fns": "^2.15.0",
+    "diff": "^5.0.0",
+    "diff2html": "^3.4.11",
     "dirty-json": "^0.9.2",
     "js-yaml": "^4.1.0",
     "json-stringify-pretty-compact": "^3.0.0",
@@ -49,6 +51,7 @@
     "swr": "^0.5.4"
   },
   "devDependencies": {
+    "@types/diff": "^5.0.1",
     "@types/lodash": "^4.14.155",
     "@types/markdown-it": "^10.0.2",
     "@types/md5": "^2.2.0",
