--- a/packages/back-end/tsconfig.json
+++ b/packages/back-end/tsconfig.json
@@ -9,7 +9,8 @@
     "sourceMap": true,
     "outDir": "dist",
     "typeRoots": ["node_modules/@types", "./typings"],
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "strictBindCallApply": true
   },
   "include": ["src/**/*", "types/**/*.d.ts", "typings/**/*.d.ts"]
 }
