Enable strictNullChecks on back-end (#116)
Catch many potential bugs that fit into a few categories:
-  Ensure user is logged in and part of an organization
-  Make sure the db returns a non-null result before using it
-  Make sure optional properties exist before using them

--- a/packages/back-end/tsconfig.json
+++ b/packages/back-end/tsconfig.json
@@ -8,7 +8,9 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "dist",
-    "typeRoots": ["node_modules/@types", "./typings"]
+    "typeRoots": ["node_modules/@types", "./typings"],
+    "strictNullChecks": true,
+    "strictBindCallApply": true
   },
   "include": ["src/**/*", "types/**/*.d.ts", "typings/**/*.d.ts"]
 }
