--- a/.dockerignore
+++ b/.dockerignore
@@ -7,13 +7,17 @@
 **/dist
 **/*.log
 **/dummy
+Dockerfile
 
 # Other packages
 packages/docs
 packages/sdk-**
-packages/stats
 
 # Secrets / private data
 **/*.env.local
 **/config.yml
 packages/back-end/uploads
+
+# Python notebooks and caches
+packages/stats/**/.pytest_cache
+packages/stats/**/__pycache__
