--- a/.dockerignore
+++ b/.dockerignore
@@ -1,13 +1,20 @@
 # Build and test artifacts
 .git
 .github
+.gitignore
+Dockerfile
+docker-compose.yml
+.dockerignore
+.eslint*
+.prettier*
+.husky
+*.md
 **/node_modules
 **/coverage
 **/.next
 **/dist
 **/*.log
 **/dummy
-Dockerfile
 
 # Other packages
 packages/docs
