--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,14 @@
 # Build and test artifacts
 .git
 .github
+.gitignore
+Dockerfile
+docker-compose.yml
+.dockerignore
+.eslint*
+.prettier*
+.husky
+*.md
 **/node_modules
 **/coverage
 **/.next
@@ -11,9 +19,12 @@
 # Other packages
 packages/docs
 packages/sdk-**
-packages/stats
 
 # Secrets / private data
 **/*.env.local
 **/config.yml
 packages/back-end/uploads
+
+# Python notebooks and caches
+packages/stats/**/.pytest_cache
+packages/stats/**/__pycache__
