--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -44,6 +44,7 @@
     "react-dropzone": "^11.3.2",
     "react-hook-form": "^7.15.0",
     "react-icons": "^4.2.0",
+    "react-paginate": "^8.0.0",
     "react-syntax-highlighter": "^15.4.3",
     "react-textarea-autosize": "^8.3.2",
     "rich-markdown-editor": "^11.17.2",
