Move build data to `buildinfo` directory

--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,7 @@ packages/back-end/dummy
 config.yml
 .vscode
 packages/stats/notebooks
-BUILD_SHA
-BUILD_DATE
+buildinfo/
 
 # Python compiled files
 __pycache__/
