--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,8 +30,9 @@ jobs:
       - name: Build, tag, and push image to Docker Hub
         run: |
           # Store current git hash and date in files
-          echo "${GITHUB_SHA}" > BUILD_SHA
-          printf '%(%Y-%m-%dT%H:%M:%SZ)T\n' > BUILD_DATE
+          mkdir -p buildinfo
+          echo "${GITHUB_SHA}" > buildinfo/SHA
+          printf '%(%Y-%m-%dT%H:%M:%SZ)T' > buildinfo/DATE
 
           # Build and push the docker image
           docker build -t growthbook/growthbook:latest -t growthbook/growthbook:git-${GITHUB_SHA::7} .
