--- a/packages/enterprise/package.json
+++ b/packages/enterprise/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "type-check": "tsc --pretty --noEmit"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/node": "^14.0.5",
     "typescript": "4.3.5"
