Use react-select for better dropdowns with searching TODO: - [x] Activation Metric dropdown for analysis/report - [ ] Segment dropdown for analysis/report - [ ] Dimension dropdown for analysis/report - [ ] Metric dropdown for idea - [ ] Data source type dropdown - [ ] Project dropdown for experiments / ideas
Later:
- Multiselect with drag&drop (metrics, tags)

--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -45,6 +45,7 @@
     "react-hook-form": "^7.15.0",
     "react-icons": "^4.2.0",
     "react-paginate": "^8.0.0",
+    "react-select": "^5.2.1",
     "react-syntax-highlighter": "^15.4.3",
     "react-textarea-autosize": "^8.3.2",
     "rich-markdown-editor": "^11.17.2",
