--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -26,6 +26,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "cron-parser": "^4.2.0",
     "crypto-js": "^4.0.0",
     "date-fns": "^2.15.0",
     "dotenv": "^8.2.0",
