--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -24,6 +24,7 @@
     "back-end": "0.0.1",
     "bootstrap": "^4.5.0",
     "clsx": "^1.1.1",
+    "cronstrue": "^1.122.0",
     "date-fns": "^2.15.0",
     "diff": "^5.0.0",
     "diff2html": "^3.4.11",
