--- a/packages/sdk-js/tsconfig.json
+++ b/packages/sdk-js/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "skipLibCheck": true,
-    "outDir": "dist/types",
+    "outDir": "dist",
     "declaration": true,
     "declarationMap": true,
     "strict": true,
