--- a/packages/sdk-js/package.json
+++ b/packages/sdk-js/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@growthbook/growthbook",
-  "version": "0.16.2",
+  "version": "0.17.0",
   "license": "MIT",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
-  "types": "dist/types/index.d.ts",
-  "typings": "dist/types/index.d.ts",
+  "types": "dist/index.d.ts",
+  "typings": "dist/index.d.ts",
   "exports": {
     "require": "./dist/cjs/index.js",
     "import": "./dist/esm/index.js"
