Fixes from code review

--- a/config/config.sample.yml
+++ b/config/config.sample.yml
@@ -19,7 +19,7 @@ datasources:
             variation_id,
             context_location_country as country
           FROM
-            experiment_viewed]
+            experiment_viewed
       experimentDimensions:
         - country
 metrics:
