--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -6,7 +6,7 @@
     "build:emails": "mkdir -p dist/templates && cp -r src/templates/* dist/templates",
     "build:clean": "rm -rf dist",
     "build:typescript": "tsc",
-    "dev": "node-dev src/server.ts",
+    "dev": "ts-node-dev src/server.ts",
     "build": "yarn build:clean && yarn build:typescript && yarn build:emails",
     "start": "node dist/server.js",
     "test": "jest --forceExit --verbose --detectOpenHandles",
@@ -85,10 +85,9 @@
     "@types/sql-formatter": "^2.3.0",
     "@types/uniqid": "^5.2.0",
     "jest": "^27.1.1",
-    "node-dev": "^7.0.0",
     "objects-to-csv": "^1.3.6",
     "ts-jest": "^27.0.5",
-    "ts-node": "^10.0.0",
+    "ts-node-dev": "^1.1.8",
     "typescript": "4.3.5"
   },
   "license": "MIT"
