--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -67,6 +67,7 @@
     "@types/react": "^17.0.19",
     "@types/react-bootstrap-typeahead": "^3.4.6",
     "@types/react-dom": "^17.0.9",
+    "@types/react-paginate": "^7.1.1",
     "@types/react-syntax-highlighter": "^11.0.4",
     "@types/react-textarea-autosize": "4.3.5",
     "sass": "^1.26.5",
