Left nav changes (#253)
Left nav
- Move features first
- Group experiments, metrics, segments, dimension, data sources under "Analysis"
- Group ideas, presentations, and dashboard under "Management"

New homepage behavior
- If there are features, show the feature list
- Else if there are experiments, show the experiments list
- Else, show the getting started steps

Co-authored-by: Jeremy Dorn <jeremy@jeremydorn.com>

--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -48,7 +48,7 @@
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.3.2",
     "react-hook-form": "^7.15.0",
-    "react-icons": "^4.2.0",
+    "react-icons": "^4.3.1",
     "react-paginate": "^8.0.0",
     "react-select": "^5.2.1",
     "react-syntax-highlighter": "^15.4.3",
@@ -67,6 +67,7 @@
     "@types/react": "^17.0.19",
     "@types/react-bootstrap-typeahead": "^3.4.6",
     "@types/react-dom": "^17.0.9",
+    "@types/react-paginate": "^7.1.1",
     "@types/react-syntax-highlighter": "^11.0.4",
     "@types/react-textarea-autosize": "4.3.5",
     "sass": "^1.26.5",
