--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -45,6 +45,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap-typeahead": "^5.0.0-rc.3",
     "react-colorful": "^5.3.0",
+    "react-diff-viewer": "^3.1.1",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.3.2",
     "react-hook-form": "^7.15.0",
