--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -52,6 +52,7 @@
     "react-icons": "^4.3.1",
     "react-paginate": "^8.0.0",
     "react-select": "^5.2.1",
+    "react-sortable-hoc": "^2.0.0",
     "react-syntax-highlighter": "^15.4.3",
     "react-textarea-autosize": "^8.3.2",
     "rich-markdown-editor": "^11.17.2",
