Gbstats packaging improvements
- Restructure pyproject.toml
  - Make pandas and scipy required
  - Move "extras" into dev-dependencies
- Add a build command to package.json that exports a requirements.txt file and a dev-requirements.txt file for pip to use
- Exported requirements files

--- a/packages/stats/pyproject.toml
+++ b/packages/stats/pyproject.toml
@@ -25,30 +25,21 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.6.1,<4.0"
+pandas = "^1.1"
+scipy = "^1.5.4"
 
-black  = { version = "20.8b1", optional = true}
-isort  = { version = "5.6.4", optional = true}
-flake8  = { version = "3.8.4", optional = true}
-flake8-docstrings = { version = "^1.6.0", optional = true }
-pytest  = { version = "6.1.2", optional = true}
-pytest-cov  = { version = "2.10.1", optional = true}
-tox  = { version = "^3.20.1", optional = true}
-virtualenv  = { version = "^20.2.2", optional = true}
-pip  = { version = "^20.3.1", optional = true}
-twine  = { version = "^3.3.0", optional = true}
-toml = {version = "^0.10.2", optional = true}
-
-[tool.poetry.extras]
-test = [
-    "pytest",
-    "black",
-    "isort",
-    "flake8",
-    "flake8-docstrings",
-    "pytest-cov"
-    ]
-
-dev = ["tox", "virtualenv", "pip", "twine", "toml"]
+[tool.poetry.dev-dependencies]
+tox = "^3.20.1"
+virtualenv = "^20.2.2"
+pip = "^20.3.1"
+twine = "^3.3.0"
+toml = "^0.10.2"
+black = "20.8b1"
+isort = "5.6.4"
+flake8 = "3.8.4"
+flake8-docstrings = "^1.6.0"
+pytest = "6.1.2"
+pytest-cov = "2.10.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
