--- a/packages/stats/package.json
+++ b/packages/stats/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "test": "pytest",
     "lint": "black gbstats tests && flake8",
-    "setup": "poetry install"
+    "setup": "poetry install",
+    "build:export": "poetry export -f requirements.txt --output requirements.txt && poetry export --dev -f requirements.txt --output dev-requirements.txt",
+    "build": "poetry build && yarn build:export"
   }
 }
