--- a/packages/stats/pyproject.toml
+++ b/packages/stats/pyproject.toml
@@ -1,9 +1,9 @@
 [tool]
 [tool.poetry]
 name = "gbstats"
-version = "0.2.1"
-homepage = "https://github.com/growthbook/growthbook/packages/stats"
-description = "Stats engine for GrowthBook, the open source A/B testing platform."
+version = "0.2.2"
+homepage = "https://github.com/growthbook/growthbook/tree/main/packages/stats"
+description = "Stats engine for GrowthBook, the open source feature flagging and A/B testing platform."
 authors = ["Jeremy Dorn <jeremy@growthbook.io>"]
 readme = "README.md"
 license =  "MIT"
