--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -119,7 +119,7 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   targetMemoryUtilizationPercentage: 80
 
-# Disable if you already set up mongodb
+# Disable if you already set up mongodb, you should also disable dependencies in Chart.yaml.
 # Make sure you specify right mongodb credential in secret
 # Example below assumes prometheus is running at sys-monitoring namespace
 # For more configurations and explanations, visit https://github.com/bitnami/charts/tree/master/bitnami/mongodb
