Remove semicolons from dimension values in docs

--- a/package.json
+++ b/package.json
@@ -45,5 +45,15 @@
       "flake8"
     ]
   },
+  "prettier": {
+    "overrides": [
+      {
+        "files": "*dimensions.mdx",
+        "options": {
+          "semi": false
+        }
+      }
+    ]
+  },
   "license": "MIT"
 }
