--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
+    "husky": "^7.0.0",
     "lint-staged": "^10.2.7",
     "prettier": "^2.2.1",
-    "typescript": "4.3.5",
-    "husky": "^7.0.0"
+    "typescript": "4.3.5"
   },
   "lint-staged": {
     "./**/*.{json,css,scss,md,mdx}": [
