--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -26,6 +26,7 @@
     "@visx/stats": "^2.1.0",
     "@visx/tooltip": "^2.1.0",
     "@webscopeio/react-textarea-autocomplete": "^4.7.3",
+    "ace-builds": "^1.5.3",
     "back-end": "0.0.1",
     "bootstrap": "^4.5.0",
     "clsx": "^1.1.1",
@@ -43,6 +44,7 @@
     "md5": "^2.3.0",
     "next": "^10.2.0",
     "react": "^17.0.1",
+    "react-ace": "^10.1.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap-typeahead": "^5.0.0-rc.3",
     "react-colorful": "^5.3.0",
