--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -37,6 +37,7 @@
     "dirty-json": "^0.9.2",
     "js-yaml": "^4.1.0",
     "json-stringify-pretty-compact": "^3.0.0",
+    "json2csv": "^5.0.7",
     "jstat": "^1.9.3",
     "lodash": "^4.17.21",
     "markdown-it": "^11.0.0",
