First pass at adding eslint rule for react-hooks

--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,8 @@
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended",
-    "plugin:@next/eslint-plugin-next/recommended"
+    "plugin:@next/eslint-plugin-next/recommended",
+    "plugin:react-hooks/recommended"
   ],
   "parserOptions": {
     "ecmaFeatures": {
