Rough pass at supporting Google Cloud Storage for self-hosted apps.

--- a/packages/back-end/.env.example
+++ b/packages/back-end/.env.example
@@ -23,3 +23,6 @@ SITE_MANAGER_EMAIL=
 # Required if using Google Analytics as a data source
 GOOGLE_OAUTH_CLIENT_ID=
 GOOGLE_OAUTH_CLIENT_SECRET=
+
+# Required if using Google Cloud Storage
+UPLOAD_METHOD=upload-method-1
