fixed backend tests and added script for ci prechecking

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "wsrun -p '*-end' -m build",
     "start": "wsrun -p '*-end' -m start",
     "setup": "wsrun -p '@growthbook/growthbook' -c build && wsrun -p '@growthbook/growthbook-react' -c build && wsrun -p 'stats' -c setup",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "ci": "yarn run type-check && yarn run test"
   },
   "workspaces": [
     "packages/*"
