--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,8 +1,20 @@
-FROM mcr.microsoft.com/vscode/devcontainers/typescript-node:0-12
+FROM mcr.microsoft.com/vscode/devcontainers/typescript-node
 
-# The front-end app (NextJS)
-EXPOSE 3000
-# The back-end api (Express)
-EXPOSE 3100
-# Start both front-end and back-end at once
-CMD ["yarn","start"]
+# RUN yarn
+
+# WORKDIR /root/workspaces/growthbook
+# RUN yarn dev
+# CMD ["yarn"]
+
+#Docker install to run mongodb
+# RUN curl -fsSL https://get.docker.com | sh
+# RUN docker run -d -p 27017:27017 --name mongo -e MONGO_INITDB_ROOT_USERNAME=root -e MONGO_INITDB_ROOT_PASSWORD=password mongo
+
+# RUN yarn dev
+
+# # The front-end app (NextJS)
+# EXPOSE 3000
+# # The back-end api (Express)
+# EXPOSE 3100
+# # Start both front-end and back-end at once
+# CMD ["yarn","start"]
