--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "dev": "next dev -p 3200",
+    "dev": "PORT=3200 next dev",
     "build": "next build",
-    "start": "next start -p 3200",
+    "start": "PORT=3200 next start",
     "type-check": "tsc --pretty --noEmit"
   },
   "dependencies": {
@@ -14,18 +14,18 @@
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@next/mdx": "^10.2.0",
-    "next": "^10.2.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "next": "12",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
-    "rehype-slug": "^4.0.1",
-    "rehype-autolink-headings": "^5.1.0"
+    "rehype-autolink-headings": "^5.1.0",
+    "rehype-slug": "^4.0.1"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.4.1",
+    "@tailwindcss/typography": "^0.5.4",
     "@types/react": "^17.0.19",
-    "autoprefixer": "^10.2.6",
-    "postcss": "^8.3.0",
-    "tailwindcss": "^2.1.2"
+    "autoprefixer": "^10.4.8",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.7"
   }
 }
