--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -26,7 +26,7 @@
     "@visx/stats": "^2.1.0",
     "@visx/tooltip": "^2.1.0",
     "@webscopeio/react-textarea-autocomplete": "^4.7.3",
-    "ace-builds": "^1.5.3",
+    "ace-builds": "^1.8.1",
     "back-end": "0.0.1",
     "bootstrap": "^4.5.0",
     "clsx": "^1.1.1",
@@ -43,23 +43,23 @@
     "markdown-it": "^11.0.0",
     "markdown-it-sanitizer": "^0.4.3",
     "md5": "^2.3.0",
-    "next": "^10.2.0",
-    "react": "^17.0.1",
+    "next": "12",
+    "react": "^18.2.0",
     "react-ace": "^10.1.0",
     "react-beautiful-dnd": "^13.1.0",
-    "react-bootstrap-typeahead": "^5.0.0-rc.3",
+    "react-bootstrap-typeahead": "^6.0.0-rc.3",
     "react-colorful": "^5.3.0",
     "react-diff-viewer": "^3.1.1",
-    "react-dom": "^17.0.1",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^11.3.2",
-    "react-hook-form": "^7.31.0",
+    "react-hook-form": "^7.34.0",
     "react-icons": "^4.3.1",
     "react-paginate": "^8.0.0",
     "react-select": "^5.2.1",
     "react-sortable-hoc": "^2.0.0",
-    "react-syntax-highlighter": "^15.4.3",
-    "react-textarea-autosize": "^8.3.2",
-    "rich-markdown-editor": "^11.17.2",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-textarea-autosize": "^8.3.4",
+    "rich-markdown-editor": "^11.21.3",
     "spectacle": "^8.3.0",
     "swr": "^0.5.4",
     "uniqid": "^5.3.0"
@@ -70,13 +70,14 @@
     "@types/markdown-it": "^10.0.2",
     "@types/md5": "^2.2.0",
     "@types/node": "^14.0.5",
-    "@types/prismjs": "^1.16.1",
-    "@types/react": "^17.0.19",
-    "@types/react-bootstrap-typeahead": "^3.4.6",
-    "@types/react-dom": "^17.0.9",
+    "@types/prismjs": "^1.26.0",
+    "@types/react": "^18.0.15",
+    "@types/react-bootstrap-typeahead": "^5.1.8",
+    "@types/react-dom": "^18.0.6",
     "@types/react-paginate": "^7.1.1",
-    "@types/react-syntax-highlighter": "^11.0.4",
-    "@types/react-textarea-autosize": "4.3.5",
+    "@types/react-redux": "^7.1.24",
+    "@types/react-syntax-highlighter": "^15.5.4",
+    "@types/react-textarea-autosize": "^8.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "sass": "^1.26.5",
     "typescript": "4.3.5"
