--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -15,7 +15,7 @@
     "import-dummy-data": "node --stack-size=8192 ./test/data-generator/import.js"
   },
   "dependencies": {
-    "@google-cloud/bigquery": "^5.5.0",
+    "@google-cloud/bigquery": "5",
     "@google-cloud/storage": "^5.20.5",
     "@slack/web-api": "^5.14.0",
     "agenda": "^4.2.1",
