--- a/packages/back-end/tsconfig.json
+++ b/packages/back-end/tsconfig.json
@@ -10,7 +10,8 @@
     "outDir": "dist",
     "typeRoots": ["node_modules/@types", "./typings"],
     "strictNullChecks": true,
-    "strictBindCallApply": true
+    "strictBindCallApply": true,
+    "incremental": true
   },
   "include": ["src/**/*", "types/**/*.d.ts", "typings/**/*.d.ts"]
 }
