--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
           # Store current git hash and date in files
           mkdir -p buildinfo
           echo "${GITHUB_SHA}" > buildinfo/SHA
-          printf '%(%Y-%m-%dT%H:%M:%SZ)T' > buildinfo/DATE
+          printf '%(%Y-%m-%dT%H:%M:%S%z)T' > buildinfo/DATE
 
           # Build and push the docker image
           docker build -t growthbook/growthbook:latest -t growthbook/growthbook:git-${GITHUB_SHA::7} .
