--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -12,8 +12,10 @@ services:
     # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
     # Runs app on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
-    network_mode: service:db
-  db:
+    network_mode: service:mongo
+    environment:
+      - MONGODB_URI=mongodb://root:password@mongo:27017/
+  mongo:
     image: mongo:latest
     restart: unless-stopped
     volumes:
@@ -21,6 +23,5 @@ services:
     environment:
      MONGO_INITDB_ROOT_USERNAME: root
      MONGO_INITDB_ROOT_PASSWORD: password
-     MONGODB_URI: mongodb://root:password@mongo:27017/
 volumes:
   mongodb-data:
