poetry python env fix

--- a/packages/stats/package.json
+++ b/packages/stats/package.json
@@ -6,6 +6,7 @@
     "test": "pytest",
     "lint": "black gbstats tests && flake8",
     "setup": "poetry install",
+    "activate": ". $(poetry env info --path)/bin/activate",
     "build:export": "poetry export -f requirements.txt --output requirements.txt && poetry export --dev -f requirements.txt --output dev-requirements.txt",
     "build": "poetry build && yarn build:export"
   }
