--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -15,6 +15,7 @@
     "@growthbook/growthbook-react": "^0.9.0",
     "@jitsu/sdk-js": "^2.2.0",
     "@jukben/emoji-search": "^2.0.1",
+    "@popperjs/core": "^2.11.5",
     "@sentry/react": "^6.17.9",
     "@visx/axis": "^2.1.0",
     "@visx/curve": "^2.1.0",
@@ -55,11 +56,11 @@
     "react-hook-form": "^7.34.0",
     "react-icons": "^4.3.1",
     "react-paginate": "^8.0.0",
+    "react-popper": "^2.3.0",
     "react-select": "^5.2.1",
     "react-sortable-hoc": "^2.0.0",
     "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.3.4",
-    "rich-markdown-editor": "^11.21.3",
     "spectacle": "^8.3.0",
     "swr": "^0.5.4",
     "uniqid": "^5.3.0"
