--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -56,6 +56,7 @@
     "react-hook-form": "^7.34.0",
     "react-icons": "^4.3.1",
     "react-paginate": "^8.0.0",
+    "react-player": "^2.10.1",
     "react-popper": "^2.3.0",
     "react-select": "^5.2.1",
     "react-sortable-hoc": "^2.0.0",
