--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "lint": "eslint './**/*.{ts,tsx,js,jsx}' --fix --max-warnings 0",
     "pretty": "prettier --write ./**/*.{json,css,scss,md,mdx}",
     "type-check": "wsrun -m type-check",
-    "test": ". $(cd packages/stats && poetry env info --path)/bin/activate && wsrun -m test",
+    "test": "wsrun -m test",
     "dev": ". $(cd packages/stats && poetry env info --path)/bin/activate && wsrun -p '*-end' -m dev",
     "build": "wsrun -p '*-end' -m build",
     "start": "wsrun -p '*-end' -m start",
