--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -48,6 +48,7 @@
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.6.0",
     "nunjucks": "^3.2.3",
+    "openid-client": "^5.1.9",
     "pg": "^8.6.0",
     "pino-http": "^5.3.0",
     "pino-pretty": "^5.1.0",
@@ -75,7 +76,7 @@
     "@types/jsonwebtoken": "^8.5.1",
     "@types/lodash": "^4.14.157",
     "@types/md5": "^2.2.0",
-    "@types/node": "^14.0.0",
+    "@types/node": "^14.0.5",
     "@types/node-fetch": "^2.5.8",
     "@types/nodemailer": "^6.4.1",
     "@types/nunjucks": "^3.1.4",
