--- a/.eslintrc
+++ b/.eslintrc
@@ -52,6 +52,6 @@
     "react/react-in-jsx-scope": "off",
     "react/prop-types": "off",
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "off"
+    "react-hooks/exhaustive-deps": "error"
   }
 }
