--- a/.eslintrc
+++ b/.eslintrc
@@ -93,13 +93,13 @@
         "./packages/front-end/hooks/useStripeSubscription.ts",
         "./packages/front-end/pages/experiments/designer/*.tsx",
         "./packages/front-end/pages/experiments/index.tsx",
-        "./packages/front-end/pages/idea/*.tsx",
+        "./packages/front-end/pages/idea/*iid*.tsx",
         "./packages/front-end/pages/index.tsx",
         "./packages/front-end/pages/integrations/vercel/index.tsx",
         "./packages/front-end/pages/invitation.tsx",
-        "./packages/front-end/pages/metric/*.tsx",
+        "./packages/front-end/pages/metric/*mid*.tsx",
         "./packages/front-end/pages/oauth/callback.tsx",
-        "./packages/front-end/pages/report/*.tsx",
+        "./packages/front-end/pages/report/*rid*.tsx",
         "./packages/front-end/pages/reports.tsx",
         "./packages/front-end/pages/settings/index.tsx",
         "./packages/front-end/pages/settings/team.tsx",
