--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,16 @@
   "settings": {
     "react": {
       "version": "detect"
+    },
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts", ".tsx"]
+    },
+    "import/resolver": {
+      "node": true,
+      "typescript": {
+        "alwaysTryTypes": true,
+        "project": ["packages/*/tsconfig.json"]
+      }
     }
   },
   "parser": "@typescript-eslint/parser",
@@ -18,6 +28,8 @@
   ],
   "extends": [
     "eslint:recommended",
+    "plugin:import/recommended",
+    "plugin:import/typescript",
     "plugin:react/recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
@@ -53,5 +65,16 @@
     "react/prop-types": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "off"
-  }
+  },
+  "overrides": [
+    {
+      "files": [
+        "./packages/sdk-js/rollup.config.js",
+        "./packages/sdk-react/rollup.config.js"
+      ],
+      "rules": {
+        "import/no-named-as-default": "off"
+      }
+    }
+  ]
 }
