--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@typescript-eslint/parser": "^5.31.0",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-typescript": "^3.5.1",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.30.1",
     "husky": "^7.0.0",
