try moving lint after build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,9 @@ jobs:
         run: |
           yarn workspace @growthbook/growthbook build
           yarn workspace @growthbook/growthbook-react build
+          
+      - name: lint
+        run: |
           yarn lint
           yarn workspace stats lint
 
