Added MS SQL support

--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -17,6 +17,7 @@
     "@google-cloud/bigquery": "5",
     "@google-cloud/storage": "^5.20.5",
     "@slack/web-api": "^5.14.0",
+    "@types/mssql": "^8.1.1",
     "agenda": "^4.2.1",
     "asn1.js": "^5.4.1",
     "async": "^3.1.0",
@@ -43,6 +44,7 @@
     "md5": "^2.3.0",
     "mongodb": "^3.7.3",
     "mongoose": "^5.13.13",
+    "mssql": "^9.0.1",
     "mysql2": "^2.3.0",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.6.0",
