--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,21 @@
   "settings": {
     "react": {
       "version": "detect"
+    },
+    "import/parsers": {
+      "@typescript-eslint/parser": [
+        ".ts",
+        ".tsx"
+      ]
+    },
+    "import/resolver": {
+      "node": true,
+      "typescript": {
+        "alwaysTryTypes": true,
+        "project": [
+          "packages/*/tsconfig.json"
+        ]
+      }
     }
   },
   "parser": "@typescript-eslint/parser",
@@ -18,6 +33,8 @@
   ],
   "extends": [
     "eslint:recommended",
+    "plugin:import/recommended",
+    "plugin:import/typescript",
     "plugin:react/recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
@@ -58,6 +75,15 @@
     "react-hooks/exhaustive-deps": "warn"
   },
   "overrides": [
+    {
+      "files": [
+        "./packages/sdk-js/rollup.config.js",
+        "./packages/sdk-react/rollup.config.js"
+      ],
+      "rules": {
+        "import/no-named-as-default": "off"
+      }
+    },
     {
       "files": [
         "./packages/docs/pages/_app.tsx",
