--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -6,12 +6,14 @@
     "build:emails": "mkdir -p dist/templates && cp -r src/templates/* dist/templates",
     "build:clean": "rm -rf dist",
     "build:typescript": "tsc",
-    "dev": "ts-node-dev src/server.ts",
+    "dev": "concurrently \"yarn watch-compile\" \"yarn watch-dev\"",
     "build": "yarn build:clean && yarn build:typescript && yarn build:emails",
     "start": "node dist/server.js",
     "test": "jest --forceExit --verbose --detectOpenHandles",
     "type-check": "tsc --pretty --noEmit",
-    "generate-dummy-data": "ts-node ./test/data-generator/new-generator.ts"
+    "generate-dummy-data": "ts-node --swc ./test/data-generator/new-generator.ts",
+    "watch-compile": "swc src -w --out-dir dist",
+    "watch-dev": "sleep 1 && nodemon --watch \"dist/**/*\" -e js ./dist/server.js"
   },
   "dependencies": {
     "@google-cloud/bigquery": "5",
@@ -61,6 +63,8 @@
     "uniqid": "^5.3.0"
   },
   "devDependencies": {
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.3.4",
     "@types/async": "^3.0.2",
     "@types/body-parser": "^1.17.1",
     "@types/compression": "^1.7.0",
@@ -85,10 +89,13 @@
     "@types/request-promise": "^4.1.44",
     "@types/sql-formatter": "^2.3.0",
     "@types/uniqid": "^5.2.0",
+    "chokidar": "^3.5.3",
+    "concurrently": "^7.4.0",
     "jest": "^27.1.1",
+    "nodemon": "^2.0.20",
     "objects-to-csv": "^1.3.6",
-    "ts-jest": "^27.0.5",
-    "ts-node-dev": "^2.0.0",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "4.7.4"
   },
   "license": "MIT"
