Faster production builds, faster back-end testing, fixed python lint errors, improved lighthouse scores

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     ],
     "./packages/stats/gbstats/**/*.py": [
       "black",
-      "flake8"
+      "flake8 --config=packages/stats/.flake8"
     ]
   },
   "license": "MIT"
