--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,7 @@ on:
     paths:
       - "packages/front-end/**"
       - "packages/back-end/**"
+      - "packages/stats/**"
       - "!**.md"
       - "yarn.lock"
       - "Dockerfile"
@@ -20,6 +21,20 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      # Ensures `yarn install` only runs when dependencies change (saves ~2 minutes)
+      - name: Cache Docker Layers
+        uses: satackey/action-docker-layer-caching@v0.0.11
+        continue-on-error: true
+        
+      # Re-use previous Next.js build cache (saves ~1 minute)
+      - name: Next.js Build Cache
+        uses: actions/cache@v2
+        with:
+          path: ${{ github.workspace }}/packages/front-end/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
