--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -65,6 +65,7 @@
   "devDependencies": {
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.3.4",
+    "@swc/jest": "^0.2.23",
     "@types/async": "^3.0.2",
     "@types/body-parser": "^1.17.1",
     "@types/compression": "^1.7.0",
@@ -94,7 +95,6 @@
     "jest": "^27.1.1",
     "nodemon": "^2.0.20",
     "objects-to-csv": "^1.3.6",
-    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "4.7.4"
   },
